Fix too large gap between header and content for custom question sets

--- a/Frontend/jesus-quiztus/src/styles/QuestionSetsOverview.scss
+++ b/Frontend/jesus-quiztus/src/styles/QuestionSetsOverview.scss
@@ -3,7 +3,9 @@
 
 .custom-questions {
   @include center-column;
-  min-height: 100vh;
+  justify-content: flex-start;
+
+  min-height: 1rem;
 
   h1 {
     margin-top: 2rem;
@@ -15,7 +17,7 @@
 .question-sets {
   @include center-column;
   gap: 1.5rem;
-  padding: 2rem 1rem;
+  padding: 0 1rem 2rem 1rem;
   @include responsive-width(600px);
 }
 
